force-app/main/default/objects/Feedback_Log__c/Feedback_Log__c.object-meta.xml
<CustomObject>
    <label>Feedback Log</label>
    <nameField>
        <label>Feedback Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Feedback Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>