force-app/main/default/objects/Feedback_Log__c/fields/Event_Decsription__c.field-meta.xml
<CustomField>
    <fullName>Event_Decsription__c</fullName>
    <label>Event Decsription</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>