force-app/main/default/objects/Feedback_Log__c/fields/Feedback_Message__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Message__c</fullName>
    <inlineHelpText>Tell us what happened</inlineHelpText>
    <label>Feedback Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>